# ollama-rag-engine

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  main.py  pyproject.toml  ragify_docs.py  requirements.txt  setup.cfg  setup.py  setup_model.py
.github/workflows/: main.yml  sync-hf.yml
app/: config.py  embedder.py  health.py  inference.py  ingest.py  main.py  rag_ollama.py  rag_openai.py  reranker.py  retriever.py  utils.py
app/rag/: ollama.py  openai.py
embeddings/chroma_db/: chroma.sqlite3
ragify_docs/: __init__.py  config.py  inference.py  ingest.py  main.py
ragify_docs/core/: chunk.py  embed.py  load_doc.py  ollama.py  openai.py  store.py  tokenize.py
tests/: test_rag.py
