[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-rag-engine"
version = "0.1.0-beta"
authors = [
  { name="Anandan B S", email="anandanklnce@gmail.com" },
]
description = "A powerful RAG engine powered by Ollama, ChromaDB, and Gradio"
readme = "README.md"
requires-python = ">= 3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
]
keywords = ["rag", "ollama", "llm", "chromadb", "embeddings", "chatbot"]

[project.urls]
Homepage = "https://github.com/anandan-bs/ollama-rag-engine"
Bug_Tracker = "https://github.com/anandan-bs/ollama-rag-engine/issues"

dependencies = [
    "gradio>=3.50.2",
    "chromadb>=0.4.15",
    "sentence-transformers>=2.2.2",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "PyMuPDF>=1.23.7",
    "tqdm>=4.66.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "flake8>=6.1.0",
    "black>=23.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=app --cov-report=term-missing"


[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
