[project]
name = "ragify-docs"
version = "0.1.0"
description = "Ingest, index, and interact with your documents using RAG and hybrid LLMs"
authors = ["Anandan B S <anandanklnce@gmail.com>"]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "gradio>=4.25.0",
    "sentence-transformers>=2.2.2",
    "transformers>=4.38.0",
    "chromadb>=0.4.24",
    "PyMuPDF>=1.23.21",
    "docx2txt>=0.8",
    "sentence-splitter>=1.4",
    "requests>=2.31.0",
    "openai>=1.3.7",
    "tqdm>=4.66.0"
]

[project.scripts]
ragify-docs = "app.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
